# retailsense

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
infra/docker/hive/conf/: hive-site.xml
infra/docker/postgres/init/: 01-init.sql  02-create-users.sql
infra/docker/superset/: Dockerfile
infra/docker/superset/home/: superset_config.py
infra/docker/trino/catalog/: iceberg.properties  minio.properties
infra/docker/trino/config/: jvm.config  node.properties
modules/bridge/: Dockerfile  README.md  pyproject.toml  pytest.ini
modules/bridge/src/retailsense_bridge/: config.py  main.py
modules/bridge/tests/: __init__.py  conftest.py  test_bridge.py  test_config.py  test_integration.py
modules/processor/: Dockerfile  README.md  pyproject.toml  pytest.ini
modules/processor/src/retailsense_processor/: config.py  main.py
modules/processor/src/retailsense_processor/transformations/: __init__.py  aggregation.py  enrichment.py  noise_filter.py
modules/processor/tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_transformations.py
modules/producer/: Dockerfile  README.md  pyproject.toml
modules/producer/src/retailsense_producer/: config.py  main.py  simulator.py
modules/producer/tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_simulator.py
