[project]
name = "retailsense"
version = "0.1.0"
description = "Privacy-First Edge-to-Cloud Data Platform for Retail Intelligence"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Mario Romera", email = "mromera@pm.me"}]
keywords = ["data-engineering", "spark", "kafka", "iceberg", "privacy"]
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["modules/*/tests"]
addopts = "-v --tb=short"